--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <h2>And I'm a
                     <span style="--i:4">Web Desginer & </span>
                     <span style="--i:3">Developer</span>
-                    <span style="--i:2">App</span>
-                    <span style="--i:1">Youtuber</span>
+<!--                     <span style="--i:2">App</span> -->
+<!--                     <span style="--i:1">Youtuber</span> -->
                 </h2>
                 <div class="gitHub-resume">
                     <a href="" class="resume" target="_main">Download Resume</a>
