--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </div>
         </div>
         <hr>
-        <div class="about" id="about">
+<!--         <div class="about" id="about">
             <div class="about-content">
                 <div class="pic"></div>
                 <div class="about-me"></div>
             </div>
         </div>
-        <hr>
+        <hr> -->
         <div class="projects" id="project">
             <div class="project">
                 <h1><span class="R">P</span>rojects</h1>
