--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
                 <ul>
                     <li><a href="#home" id="first" class="list" role="button" onclick="menuBar();">Home</a></li>
                     <li><a href="#about" class="list" role="button" onclick="menuBar();">About</a></li>
+                    <li><a href="#project" class="list" role="button" onclick="menuBar();">Projects</a></li>
                     <li><a href="#services" class="list" role="button" onclick="menuBar();">Services</a></li>
-                    <li><a href="#Skills" class="list" role="button" onclick="menuBar();">Skills</a></li>
-                    <li><a href="#project" class="list" role="button" onclick="menuBar();">Project</a></li>
-                    <li><a href="#portfolio" class="list" role="button" onclick="menuBar();">Portfolio</a></li>
                     <li><a href="#contact" class="list" role="button" onclick="menuBar();">Contact</a></li>
                 </ul>
             </nav>
