--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <body>
     <main>
         <header id="home">
-            <h1><a href="#"> <span class="R">R</span>ituraj's <span class="R">P</span>ortfolio</a></h1>
+            <h1><a href=""> <span class="R">R</span>ituraj's <span class="R">P</span>ortfolio</a></h1>
             <a href="#" role="button" class="menu-btn" onclick="menuBar();">☰</a>
             <nav>
                 <ul>
                     <li><a href="#home" id="first" class="list" role="button" onclick="menuBar();">Home</a></li>
                     <li><a href="#about" class="list" role="button" onclick="menuBar();">About</a></li>
                     <li><a href="#project" class="list" role="button" onclick="menuBar();">Projects</a></li>
+                    <li><a href="#skills" class="list" role="button" onclick="menuBar();">Skills</a></li>
                     <li><a href="#services" class="list" role="button" onclick="menuBar();">Services</a></li>
                     <li><a href="#contact" class="list" role="button" onclick="menuBar();">Contact</a></li>
                 </ul>
@@ -32,8 +33,8 @@
                 <h2>And I'm a
                     <span style="--i:4">Web Desginer & </span>
                     <span style="--i:3">Developer</span>
-<!--                     <span style="--i:2">App</span> -->
-<!--                     <span style="--i:1">Youtuber</span> -->
+                    <span style="--i:2">App</span>
+                    <span style="--i:1">Youtuber</span>
                 </h2>
                 <div class="gitHub-resume">
                     <a href="" class="resume" target="_main">Download Resume</a>
@@ -45,13 +46,40 @@
             </div>
         </div>
         <hr>
-<!--         <div class="about" id="about">
-            <div class="about-content">
-                <div class="pic"></div>
-                <div class="about-me"></div>
+        <div class="about" id="about">
+            <h1><span class="R">A</span>bout <span class="R">M</span>e</h1>
+            <div class="about-info">
+                <div class="my-pic">
+                    <img src="img/Rituraj's pic.png" alt="Rituraj's pic">
+                </div>
+                <div class="details">
+                    <h2>Full Stack Developer</h2>
+                    <p>I am a skilled web designer with over 2 years of experience<!-- in the industry-->.
+                        My passion lies in creating captivating design and implementing them through frotend
+                        development.
+                        I take pride in staying up-to-date with current design trends and leveraging my creativity to
+                        produce
+                        a deep understanding of user experience (UX) and user interface (UI) princeples.
+                        By putting myself in the shoes of the end-users, I strive to create intuitive and seamless
+                        browsing
+                        experience.
+                        I believev that a well-designed website should not only look visually appealing but also provide
+                        a
+                        smooth and
+                        enjoyable interaction for visitors. When starting a new project, I thoroughly research and
+                        analyse
+                        the target audience
+                        and the client's speceific requirements. This enables me to tailor my designs to meet their
+                        expectations and deliver a
+                        unique online presence that aligns with their brand identify.. </p>
+                    <div class="about-more">
+                        <a href="" class="about-more-btn" target="_main">About More</a>
+                        <a href="" class="hire-me" target="_main">Hire Me</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <hr> -->
+        <hr>
         <div class="projects" id="project">
             <div class="project">
                 <h1><span class="R">P</span>rojects</h1>
@@ -61,7 +89,7 @@
                         <div class="app-info">
                             <h3>Chat App</h3>
                             <p>The app for Test-series</p>
-                            <a href="https://riturajkumar.pythonanywhere.com/home" target='_main'><i
+                            <a href="https://riturajkumar.pythonanywhere.com/about" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -197,6 +225,138 @@
             </div>
         </div>
         <hr>
+        <div class="skills" id="skills">
+            <h1 class="contact-me"><span class="R">S</span>kills</h1>
+            <div class="content">
+                <div class="technical-skills">
+                    <h2>Techincal Skills</h2>
+                    <div class="language">
+                        <div class="lang c">
+                            <i class="fa-brands fa-c"></i>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>95%</p>
+                        </div>
+                        <div class="lang html">
+                            <i class="fa-brands fa-html5"></i>
+                            <span>HTML</span>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>90%</p>
+                        </div>
+                        <div class="lang css">
+                            <i class="fa-brands fa-css3"></i>
+                            <p>CSS</p>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>60%</p>
+                        </div>
+                        <div class="lang js">
+                            <i class="fa-brands fa-js"></i>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>70%</p>
+                        </div>
+                        <div class="lang python">
+                            <i class="fa-brands fa-python"></i>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>60%</p>
+                        </div>
+                        <div class="lang django">
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                                viewBox="0 0 48 48">
+                                <path fill="#004d40" fill-rule="evenodd"
+                                    d="M8,16v12.646C6.655,28.9,5.949,29,4.878,29 C1.67,28.997,0,27.565,0,24.816c0-2.649,1.771-4.368,4.516-4.368c0.426,0,0.75,0.033,1.143,0.134V16H8z M5.659,22.672 c-0.308-0.1-0.561-0.134-0.886-0.134c-1.328,0-2.096,0.809-2.096,2.228c0,1.381,0.734,2.143,2.079,2.143 c0.291,0,0.527-0.016,0.903-0.067V22.672L5.659,22.672z"
+                                    clip-rule="evenodd"></path>
+                                <path fill="#004d40" fill-rule="evenodd"
+                                    d="M12,20.046v6.618c0,2.076-0.155,3.224-0.612,4.084 c-0.426,0.827-0.987,1.349-2.146,1.925l-2.437-1.149c1.159-0.539,1.721-1.015,2.079-1.742c0.375-0.743,0.494-1.754,0.494-4.017 v-5.721H12z"
+                                    clip-rule="evenodd"></path>
+                                <rect width="2.623" height="2.713" x="9.377" y="16" fill="#004d40" fill-rule="evenodd"
+                                    clip-rule="evenodd"></rect>
+                                <path fill="#004d40" fill-rule="evenodd"
+                                    d="M13.734,20.876c1.136-0.552,2.223-0.795,3.408-0.795 c1.321,0,2.189,0.363,2.573,1.073C19.93,21.551,20,22.068,20,23.175v5.407c-1.152,0.171-2.606,0.294-3.673,0.294 c-2.156,0-3.123-0.778-3.123-2.505c0-1.868,1.285-2.731,4.441-3.006V22.78c0-0.483-0.235-0.658-0.884-0.658 c-0.95,0-2.02,0.278-3.024,0.812L13.734,20.876z M17.761,25.107c-1.702,0.171-2.255,0.449-2.255,1.141 c0,0.518,0.318,0.761,1.02,0.761c0.384,0,0.735-0.034,1.235-0.12L17.761,25.107L17.761,25.107z"
+                                    clip-rule="evenodd"></path>
+                                <path fill="#004d40" fill-rule="evenodd"
+                                    d="M21.418,20.693c1.52-0.421,2.772-0.613,4.041-0.613 c1.318,0,2.273,0.317,2.839,0.93C28.83,21.588,29,22.222,29,23.573v5.303h-2.574v-5.195c0-1.038-0.335-1.424-1.252-1.424 c-0.351,0-0.669,0.035-1.186,0.195v6.425h-2.57V20.693z"
+                                    clip-rule="evenodd"></path>
+                                <path fill="#004d40" fill-rule="evenodd"
+                                    d="M30.177,30.006c0.919,0.486,1.839,0.71,2.812,0.71 c1.721,0,2.454-0.473,2.454-2.176v-0.052c-0.51,0.258-1.025,0.366-1.704,0.366c-2.302,0-3.739-1.547-3.739-3.997 c0-3.043,2.141-4.762,5.974-4.762c1.126,0,2.167,0.121,3.427,0.383l-0.899,1.93c-0.699-0.138-0.057-0.021-0.584-0.072v0.279 l0.034,1.13l0.017,1.461c0.017,0.366,0.017,0.73,0.034,1.096v0.73c0,2.295-0.19,3.131-0.751,4.02 c-0.818,1.302-2.234,1.947-4.246,1.947c-1.024,0-1.91-0.155-2.829-0.521V30.006L30.177,30.006z M35.392,22.251h-0.085h-0.19 c-0.51-0.017-1.108,0.121-1.518,0.383c-0.628,0.365-0.953,1.027-0.953,1.964c0,1.337,0.649,2.102,1.808,2.102 c0.358,0,0.649-0.069,0.987-0.172v-0.193v-0.73c0-0.314-0.017-0.662-0.017-1.027l-0.017-1.234l-0.017-0.886V22.251z"
+                                    clip-rule="evenodd"></path>
+                                <path fill="#004d40" fill-rule="evenodd"
+                                    d="M43.566,20.046c2.753,0,4.434,1.66,4.434,4.348 c0,2.756-1.752,4.483-4.544,4.483c-2.756,0-4.456-1.659-4.456-4.33C39.005,21.774,40.757,20.046,43.566,20.046z M43.509,26.752 c1.057,0,1.681-0.838,1.681-2.294c0-1.439-0.607-2.294-1.663-2.294c-1.093,0-1.718,0.838-1.718,2.294 C41.81,25.914,42.438,26.752,43.509,26.752L43.509,26.752z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>50%</p>
+                        </div>
+                        <div class="lang cpp">
+                            <i class="fa-brands fa-c">++</i>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>85%</p>
+                        </div>
+                        <div class="lang dsa">
+                            <p>DSA - C & C++</p>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                            </div>
+                            <p>80%</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="professional-skills">
+                    <h2>Professional Skills</h2>
+                    <div class="content">
+                        <div class="pro-skill creativity">
+                            <svg width="140" height="140">
+                                <circle class="bg"></circle>
+                                <circle class="progress"></circle>
+                            </svg>
+                            <div class="percent-text">90%</div>
+                            <div class="skill-name">Creativity</div>
+                        </div>
+
+                        <div class="pro-skill communication">
+                            <svg width="140" height="140">
+                                <circle class="bg"></circle>
+                                <circle class="progress"></circle>
+                            </svg>
+                            <div class="percent-text">70%</div>
+                            <div class="skill-name">Communication</div>
+                        </div>
+
+                        <div class="pro-skill problem-solving">
+                            <svg width="140" height="140">
+                                <circle class="bg"></circle>
+                                <circle class="progress"></circle>
+                            </svg>
+                            <div class="percent-text">85%</div>
+                            <div class="skill-name">Problem Solving</div>
+                        </div>
+
+                        <div class="pro-skill teamwork">
+                            <svg width="140" height="140">
+                                <circle class="bg"></circle>
+                                <circle class="progress"></circle>
+                            </svg>
+                            <div class="percent-text">80%</div>
+                            <div class="skill-name">Teamwork</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
         <div class="contact" id="contact">
             <div class="content">
                 <div class="social">
@@ -230,6 +390,7 @@
         </div>
         <hr>
     </main>
+    <a href="#home" class="up-arrow">⬆</a>
     <footer></footer>
 
 
