--- a/index.html
+++ b/index.html
@@ -88,8 +88,17 @@
                         <img src="img/chit-chat.avif" alt="chit-chat">
                         <div class="app-info">
                             <h3>Chat App</h3>
-                            <p>The app for Test-series</p>
+                            <p>Chat Application</p>
                             <a href="https://riturajkumar.pythonanywhere.com/about" target='_main'><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="img/Quick Hire.jpg" alt="Quick-Hire">
+                        <div class="app-info">
+                            <h3>Quick Hire</h3>
+                            <p>Selector-Applicant-Simutwere</p>
+                            <a href="https://QuickHire.pythonanywhere.com/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -106,7 +115,7 @@
                         <img src="img/Apple-Music-icon-circle.png" alt="music-player">
                         <div class="app-info">
                             <h3>Music Player</h3>
-                            <p>The app for Test-series</p>
+                            <p>Music Player App</p>
                             <a href="https://mmpr.pythonanywhere.com/home" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -115,7 +124,7 @@
                         <img src="img/NumPusIcon.png" alt="numpuz">
                         <div class="app-info">
                             <h3>NumPuz Game</h3>
-                            <p>The app for Test-series</p>
+                            <p>NumPuz Game</p>
                             <a href="https://riturajkukmar.github.io/NumPuz/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -124,7 +133,7 @@
                         <img src="img/tic tac teo.png" alt="tic tac teo">
                         <div class="app-info">
                             <h3>Tic Tac Teo</h3>
-                            <p>The app for Test-series</p>
+                            <p>Tic Tac Teo Game</p>
                             <a href="https://riturajkukmar.github.io/Tic-Tac-Toe/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -133,7 +142,7 @@
                         <img src="img/ludo.jpg" alt="ludo">
                         <div class="app-info">
                             <h3>Ludo King</h3>
-                            <p>The app for Test-series</p>
+                            <p>Ludo King Game</p>
                             <a href="https://riturajkukmar.github.io/Ludo-king---Game/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -142,7 +151,7 @@
                         <img src="img/hangMan.png" alt="hangMan">
                         <div class="app-info">
                             <h3>GangMan Game</h3>
-                            <p>The app for Test-series</p>
+                            <p>GangMan Game</p>
                             <a href="https://riturajkukmar.github.io/HangMan-Game/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -151,7 +160,7 @@
                         <img src="img/calculater.jpg" alt="calculater">
                         <div class="app-info">
                             <h3>100MS Calculator</h3>
-                            <p>The app for Test-series</p>
+                            <p>100MS Calculator</p>
                             <a href="https://riturajkukmar.github.io/My-Calculator/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -160,7 +169,7 @@
                         <img src="img/ball-sort.png" alt="ball-sort">
                         <div class="app-info">
                             <h3>Ball-Sort Game</h3>
-                            <p>The app for Test-series</p>
+                            <p>Ball-Sort Game</p>
                             <a href="https://riturajkukmar.github.io/Ball-Sort/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -169,7 +178,7 @@
                         <img src="img/Typing-test.jpg" alt="typing-test">
                         <div class="app-info">
                             <h3>Typing Speed Test</h3>
-                            <p>The app for Test-series</p>
+                            <p>Typing Speed Test</p>
                             <a href="https://riturajkukmar.github.io/Typing-Test/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -178,7 +187,7 @@
                         <img src="img/bmi.png" alt="bmi">
                         <div class="app-info">
                             <h3>BMI Calculator</h3>
-                            <p>The app for Test-series</p>
+                            <p>BMI Calculator</p>
                             <a href="https://riturajkukmar.github.io/BMI/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -187,7 +196,7 @@
                         <img src="img/sudoku.png" alt="sudoku">
                         <div class="app-info">
                             <h3>Sudoku Solver</h3>
-                            <p>The app for Test-series</p>
+                            <p>Sudoku Solver</p>
                             <a href="https://riturajkukmar.github.io/SUDOKU-SOLVER/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -196,7 +205,7 @@
                         <img src="img/love-calculater.jpg" alt="love-calculter">
                         <div class="app-info">
                             <h3>Love-Calculator</h3>
-                            <p>The app for Test-series</p>
+                            <p>Love-Calculator</p>
                             <a href="https://riturajkukmar.github.io/Pure-Love-Calculation/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -205,7 +214,7 @@
                         <img src="img/Number-Block.png" alt="number-block">
                         <div class="app-info">
                             <h3>Number-Block Game</h3>
-                            <p>The app for Test-series</p>
+                            <p>Number-Block Game</p>
                             <a href="https://riturajkukmar.github.io/Num-Block/" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
