--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             <a href="https://www.linkedin.com/in/rituraj-kumar-17b82a297/" target="_main"><i
                                     class="fa-brands fa-linkedin"></i></a>
                             <a href="https://www.facebook.com/" target="_main"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://x.com/?lang=en" target="_main"><i
+                            <a href="https://x.com/RITURAJ_1618" target="_main"><i
                                     class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://www.instagram.com/accounts/login/?hl=en" target="_main"><i
                                     class="fa-brands fa-instagram"></i></a>
