--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <span style="--i:1">Youtuber</span> -->
                 </h2>
                 <div class="gitHub-resume">
-                    <a href="" class="resume" target="_main">Download Resume</a>
+                    <a href="" class="resume" download="" target="_main">Download Resume</a>
                     <a href="https://github.com/RITURAJKUKMAR" class="gitHub" target="_main">Visit Github</a>
                 </div>
             </div>
@@ -381,9 +381,7 @@
                     <h1 class="contact-me"><span class="R">C</span>ontact <span class="R">M</span>e</h1>
                     <div class="social-container">
                         <p><i class="fa-solid fa-paper-plane"></i> riturajkumar1105@gmail.com</p>
-                        <p><i class="fa-solid fa-phone"></i> 
-<!--                             9507091174 -->
-                        </p>
+                        <p><i class="fa-solid fa-phone"></i> 9507091174</p>
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/in/rituraj-kumar-17b82a297/" target="_main"><i
                                     class="fa-brands fa-linkedin"></i></a>
