--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Personal Portfolio - Rituraj's Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -395,14 +396,15 @@
                     </div>
                 </div>
                 <div class="form">
-                    <form action="" method="post">
-                        <input type="text" name="Name" minlength="4" required placeholder="Enter Your Name">
-                        <input type="email" name="email" required placeholder="Enter Your Email">
-                        <input type="text" name="mobile" required placeholder="Enter Your Mobile No.">
-                        <textarea name="message" class="message" id="message" required
+                    <div>
+                        <input type="text" name="Name" class="name" minlength="4" required
+                            placeholder="Enter Your Name">
+                        <input type="email" name="email" class="email" required placeholder="Enter Your Email">
+                        <input type="text" name="mobile" class="mobile" required placeholder="Enter Your Mobile No.">
+                        <textarea name="text" class="sms" id="sms" required
                             placeholder="Enter Your Message...."></textarea>
-                        <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-                    </form>
+                        <button type="submit" onclick="sendEmail();"><i class="fa-solid fa-paper-plane"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -413,6 +415,7 @@
 
 
     <script src="app.js"></script>
+    <script src="sendEmail.js"></script>
 </body>
 
 </html>
