--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <header id="home">
-            <h1><a href=""> <span class="R">R</span>ituraj's <span class="R">P</span>ortfolio</a></h1>
+            <h1><a href="https://riturajkukmar.github.io/My-Portfolio/"> <span class="R">R</span>ituraj's <span class="R">P</span>ortfolio</a></h1>
             <a href="#" role="button" class="menu-btn" onclick="menuBar();">☰</a>
             <nav>
                 <ul>
@@ -22,7 +22,6 @@
                     <li><a href="#about" class="list" role="button" onclick="menuBar();">About</a></li>
                     <li><a href="#project" class="list" role="button" onclick="menuBar();">Projects</a></li>
                     <li><a href="#skills" class="list" role="button" onclick="menuBar();">Skills</a></li>
-                    <li><a href="#services" class="list" role="button" onclick="menuBar();">Services</a></li>
                     <li><a href="#contact" class="list" role="button" onclick="menuBar();">Contact</a></li>
                 </ul>
             </nav>
@@ -259,6 +258,15 @@
                                 <span class="p">95%</span>
                             </div>
                         </div>
+                        <div class="lang java">
+                            <div class="lang-name">
+                                <i class="fa-brands fa-java"></i>
+                            </div>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                                <span class="p">70%</span>
+                            </div>
+                        </div>
                         <div class="lang dsa">
                             <div class="lang-name">
                                 <p>DSA - C & C++</p>
@@ -370,12 +378,6 @@
             </div>
         </div>
         <hr>
-        <div class="services">
-            <div class="content">
-                <div class="web-design"></div>
-
-            </div>
-        </div>
         <div class="contact" id="contact">
             <div class="content">
                 <div class="social">
