--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
                         <div class="lang java">
                             <div class="lang-name">
                                 <i class="fa-brands fa-java"></i>
+                                <span>JAVA</span>
                             </div>
                             <div class="perce-line">
                                 <div class="perce"></div>
