--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <main>
         <header id="home">
-            <h1><a href="https://riturajkukmar.github.io/My-Portfolio/"> <span class="R">R</span>ituraj's <span class="R">P</span>ortfolio</a></h1>
+            <h1><a href="https://riturajkukmar.github.io/My-Portfolio/"> <span class="R">R</span>ituraj's <span
+                        class="R">P</span>ortfolio</a></h1>
             <a href="#" role="button" class="menu-btn" onclick="menuBar();">☰</a>
             <nav>
                 <ul>
@@ -37,7 +38,7 @@
                     <span style="--i:1">Youtuber</span> -->
                 </h2>
                 <div class="gitHub-resume">
-                    <a href="" class="resume" download="" target="_main">Download Resume</a>
+                    <a href="img/Rituraj_Kumar_Resume.docx" class="resume" download="" target="_main">Download Resume</a>
                     <a href="https://github.com/RITURAJKUKMAR" class="gitHub" target="_main">Visit Github</a>
                 </div>
             </div>
@@ -73,8 +74,8 @@
                         expectations and deliver a
                         unique online presence that aligns with their brand identify.. </p>
                     <div class="about-more">
-                        <a href="" class="about-more-btn" target="_main">About More</a>
-                        <a href="" class="hire-me" target="_main">Hire Me</a>
+                        <a href="img/Rituraj_Kumar_Resume.docx" class="about-more-btn" target="_main">About More</a>
+                        <a href="#contact" class="hire-me" target="_main">Hire Me</a>
                     </div>
                 </div>
             </div>
