--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 <h1><span class="R">P</span>rojects</h1>
                 <div class="web">
                     <div class="work">
-                        <img src="img/chit-chat.avif" alt="chit-chat">
+                        <img src="img/click-cart.jpg" alt="click-cart">
                         <div class="app-info">
-                            <h3>Chat App</h3>
-                            <p>Chat Application</p>
-                            <a href="https://riturajkumar.pythonanywhere.com/about" target='_main'><i
+                            <h3>CLICK-CART</h3>
+                            <p>E-Commerce-Web-App</p>
+                            <a href="https://github.com/RITURAJKUKMAR/CLICKCART-Ecommerce-WebApp" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -113,29 +113,29 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/Apple-Music-icon-circle.png" alt="music-player">
+                        <img src="img/result.jpeg" alt="Student-Result-Management">
                         <div class="app-info">
-                            <h3>Music Player</h3>
-                            <p>Music Player App</p>
-                            <a href="https://mmpr.pythonanywhere.com/home" target='_main'><i
+                            <h3>Student-Result-Management</h3>
+                            <p>Student-Result-Management-System</p>
+                            <a href="https://github.com/RITURAJKUKMAR/StudentResultManagement" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/NumPusIcon.png" alt="numpuz">
+                        <img src="img/LIBRARY-MANAGEMENTa.jpg" alt="LIBRARY-MANAGEMENT">
                         <div class="app-info">
-                            <h3>NumPuz Game</h3>
-                            <p>NumPuz Game</p>
-                            <a href="https://riturajkukmar.github.io/NumPuz/" target='_main'><i
+                            <h3>LIBRARY-MANAGEMENT</h3>
+                            <p>LIBRARY-MANAGEMENT-C++</p>
+                            <a href="https://github.com/RITURAJKUKMAR/LIBRARY-MANAGEMENT-CPP" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/tic tac teo.png" alt="tic tac teo">
+                        <img src="img/Portfolio.png" alt="Portfolio">
                         <div class="app-info">
-                            <h3>Tic Tac Teo</h3>
-                            <p>Tic Tac Teo Game</p>
-                            <a href="https://riturajkukmar.github.io/Tic-Tac-Toe/" target='_main'><i
+                            <h3>Rituraj's Portfolio</h3>
+                            <p>Portfolio Web-App</p>
+                            <a href="https://github.com/RITURAJKUKMAR/My-Portfolio" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -149,29 +149,29 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/hangMan.png" alt="hangMan">
+                        <img src="img/chit-chat.avif" alt="CHIT-CHAT">
                         <div class="app-info">
-                            <h3>GangMan Game</h3>
-                            <p>GangMan Game</p>
-                            <a href="https://riturajkukmar.github.io/HangMan-Game/" target='_main'><i
+                            <h3>CHIT-CHAT</h3>
+                            <p>CHIT-CHAT Web-App</p>
+                            <a href="https://github.com/RITURAJKUKMAR/CHIT-CHAT-WebApp" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/calculater.jpg" alt="calculater">
+                        <img src="img/Apple-Music-icon-circle.png" alt="Music Player">
                         <div class="app-info">
-                            <h3>100MS Calculator</h3>
-                            <p>100MS Calculator</p>
-                            <a href="https://riturajkukmar.github.io/My-Calculator/" target='_main'><i
+                            <h3>Music Player</h3>
+                            <p>Music Player Web-App</p>
+                            <a href="https://github.com/RITURAJKUKMAR/Music-Player" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/ball-sort.png" alt="ball-sort">
+                        <img src="img/to do list.webp" alt="to do list">
                         <div class="app-info">
-                            <h3>Ball-Sort Game</h3>
-                            <p>Ball-Sort Game</p>
-                            <a href="https://riturajkukmar.github.io/Ball-Sort/" target='_main'><i
+                            <h3>To-Do-List</h3>
+                            <p>To-Do-List Web-App</p>
+                            <a href="https://github.com/RITURAJKUKMAR/To-Do-List" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
