--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="app-info">
                             <h3>Quick Hire</h3>
                             <p>Selector-Applicant-Simutwere</p>
-                            <a href="https://QuickHire.pythonanywhere.com/" target='_main'><i
+                            <a href="https://github.com/RITURAJKUKMAR/QuickHire-Selector-Applicant-Simutware-Hiring" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                         <div class="app-info">
                             <h3>Online Test-App</h3>
                             <p>The app for Test-series</p>
-                            <a href="https://gwg.pythonanywhere.com/" target='_main'><i
+                            <a href="https://github.com/RITURAJKUKMAR/Online-Test-WebApp" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -140,15 +140,6 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="img/ludo.jpg" alt="ludo">
-                        <div class="app-info">
-                            <h3>Ludo King</h3>
-                            <p>Ludo King Game</p>
-                            <a href="https://riturajkukmar.github.io/Ludo-king---Game/" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
                         <img src="img/chit-chat.avif" alt="CHIT-CHAT">
                         <div class="app-info">
                             <h3>CHIT-CHAT</h3>
@@ -175,52 +166,9 @@
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
-                    <div class="work">
-                        <img src="img/Typing-test.jpg" alt="typing-test">
-                        <div class="app-info">
-                            <h3>Typing Speed Test</h3>
-                            <p>Typing Speed Test</p>
-                            <a href="https://riturajkukmar.github.io/Typing-Test/" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="img/bmi.png" alt="bmi">
-                        <div class="app-info">
-                            <h3>BMI Calculator</h3>
-                            <p>BMI Calculator</p>
-                            <a href="https://riturajkukmar.github.io/BMI/" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="img/sudoku.png" alt="sudoku">
-                        <div class="app-info">
-                            <h3>Sudoku Solver</h3>
-                            <p>Sudoku Solver</p>
-                            <a href="https://riturajkukmar.github.io/SUDOKU-SOLVER/" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="img/love-calculater.jpg" alt="love-calculter">
-                        <div class="app-info">
-                            <h3>Love-Calculator</h3>
-                            <p>Love-Calculator</p>
-                            <a href="https://riturajkukmar.github.io/Pure-Love-Calculation/" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="img/Number-Block.png" alt="number-block">
-                        <div class="app-info">
-                            <h3>Number-Block Game</h3>
-                            <p>Number-Block Game</p>
-                            <a href="https://riturajkukmar.github.io/Num-Block/" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
                 </div>
+
+                
                 <div class="app">
                     <div class="work">
                         <img src="img/gwg.jpg" alt="gwg">
