--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     <span style="--i:1">Youtuber</span> -->
                 </h2>
                 <div class="gitHub-resume">
-                    <a href="img/Rituraj_Kumar_Resume.docx" class="resume" download="" target="_main">Download Resume</a>
+                    <a href="img/Rituraj_Kumar_Resume.docx" class="resume" download="" target="_main">Download
+                        Resume</a>
                     <a href="https://github.com/RITURAJKUKMAR" class="gitHub" target="_main">Visit Github</a>
                 </div>
             </div>
@@ -99,8 +100,8 @@
                         <div class="app-info">
                             <h3>Quick Hire</h3>
                             <p>Selector-Applicant-Simutwere</p>
-                            <a href="https://github.com/RITURAJKUKMAR/QuickHire-Selector-Applicant-Simutware-Hiring" target='_main'><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/RITURAJKUKMAR/QuickHire-Selector-Applicant-Simutware-Hiring"
+                                target='_main'><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
@@ -160,15 +161,24 @@
                     <div class="work">
                         <img src="img/to do list.webp" alt="to do list">
                         <div class="app-info">
-                            <h3>To-Do-List</h3>
+                            <h3>To-Do-List with Voice Command</h3>
                             <p>To-Do-List Web-App</p>
                             <a href="https://github.com/RITURAJKUKMAR/To-Do-List" target='_main'><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
+                    <div class="work">
+                        <img src="img/CurrencyConverter.png" alt="Currency Converter">
+                        <div class="app-info">
+                            <h3>Currency Converter</h3>
+                            <p>Currency Converter API</p>
+                            <a href="https://github.com/RITURAJKUKMAR/Currency-Converter" target='_main'><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
                 </div>
 
-                
+
                 <div class="app">
                     <div class="work">
                         <img src="img/gwg.jpg" alt="gwg">
@@ -214,7 +224,7 @@
                             </div>
                             <div class="perce-line">
                                 <div class="perce"></div>
-                                <span class="p">70%</span>
+                                <span class="p">80%</span>
                             </div>
                         </div>
                         <div class="lang dsa">
@@ -253,7 +263,7 @@
                             </div>
                             <div class="perce-line">
                                 <div class="perce"></div>
-                                <span class="p">70%</span>
+                                <span class="p">80%</span>
                             </div>
                         </div>
                         <div class="lang python">
