--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@
                                 <span class="p">80%</span>
                             </div>
                         </div>
+                        <div class="lang sql">
+                            <div class="lang-name">
+                                <i class="fa-solid fa-database"></i>
+                                <span>Sql & MySql</span>
+                            </div>
+                            <div class="perce-line">
+                                <div class="perce"></div>
+                                <span class="p">70%</span>
+                            </div>
+                        </div>
                         <div class="lang dsa">
                             <div class="lang-name">
                                 <p>DSA - C & C++</p>
